--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -59,7 +59,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/Lord1.jfif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 
 }
@@ -68,7 +68,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/Lord2.jfif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 
 }
@@ -77,7 +77,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/Lord3.jfif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 
 }
@@ -86,7 +86,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/Lord4.jfif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 
 }
@@ -95,7 +95,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/Lord5.jfif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 
 }
@@ -104,7 +104,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/lord6.gif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     
 
@@ -114,7 +114,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/lord7.gif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     
 
@@ -124,7 +124,7 @@ body{
     width: 100%;
     height: 800px;
     background-image: url(../Img/lord9.gif);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 
 }
