--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -76,7 +76,7 @@ body{
 .div-11 {
     width: 100%;
     height: 800px;
-    background-image: url(../Img/Lord3.jfif);
+    background-image: url(../Img/lord3.jfif);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 
@@ -85,7 +85,7 @@ body{
 .div-12 {
     width: 100%;
     height: 800px;
-    background-image: url(../Img/Lord4.jfif);
+    background-image: url(../Img/lord4.jfif);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 
@@ -94,7 +94,7 @@ body{
 .div-13 {
     width: 100%;
     height: 800px;
-    background-image: url(../Img/Lord5.jfif);
+    background-image: url(../Img/lord5.jfif);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 
